# objectscope

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  README.md  pyproject.toml
.github/workflows/: ci-cd.yml
docs/: Makefile  conf.py  example.ipynb  make.bat  requirements.txt
src/objectscope/: __init__.py  anchor_bbox_utils.py  evaluator.py  model_export_utils.py  train_pipeline.py  trainer.py  utils.py
tests/: test_objectscope.py
