[tool.poetry]
name = "objectscope"
version = "1.6.1"
description = "Object detection"
authors = ["Agbleze"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10.14"

[tool.poetry.dev-dependencies]
pytest = "8.3.3"
python-semantic-release = "10.1.0"
poetry = "2.1.3"
pytest-cov = "^5.0.0"
jupyter = "^1.1.1"
myst-nb = {version = "^1.1.2", python = "^3.9"}
sphinx-autoapi = "^3.3.2"
sphinx-rtd-theme = "^2.0.0"
sphinx = "7.4.7"

[tool.semantic_release]
version_toml = [
    "pyproject.toml:tool.poetry.version",
]                                                    # version location
branch = "main"                                      # branch to make releases of
changelog_file = "CHANGELOG.md"                      # changelog file
build_command = "pip install poetry && poetry build" # build dists 

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
objectscope = "objectscope.train_pipeline:main"